TEST_PROGRAMS/INVALID/05/multiple_distinct_types_for_var.go
/* Multiple distinct types declared for a variable. */

package main

var m int float64 // Error: Can't have multiple types for a variable.

func main() {
	// Do nothing.
}
